dify/k8s/31-web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dify-web-service
  namespace: dify
spec:
  type: ClusterIP
  selector:
    app: dify-web
  ports:
  - protocol: TCP
    port: 3000
    targetPort: http
